--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -42,3 +42,16 @@ tr > td {
   display: block;
   margin: 5px auto 5px auto;
 }
+
+.post {
+//  border-bottom: 1px solid;
+  margin-bottom: 10px;
+}
+
+.delete {
+  float: right;
+}
+
+.btn {
+  margin-bottom: 10px;
+}
