--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,14 +1,17 @@
-<h1>Post</h1>
-<%= form_for Post.new, html: { multipart: true } do |f| %>
-    <%= hidden_field :user, :id %>
-    <%= hidden_field :current_user, :id %>
-    <%= f.label 'Content' %>
-    <%= f.text_area :content, class: 'form-control' %>
-    <%= f.label 'Image' %>
-    <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
-    <br>
-    <%= f.submit 'Post', class: 'btn btn-primary' %>
-<% end %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2"><h1>Post</h1>
+    <%= form_for Post.new, html: { multipart: true } do |f| %>
+        <%= hidden_field :user, :id %>
+        <%= hidden_field :current_user, :id %>
+        <%= f.label 'Content' %>
+        <%= f.text_area :content, class: 'form-control' %>
+        <%= f.label 'Image' %>
+        <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
+        <br>
+        <%= f.submit 'Post', class: 'btn btn-primary' %>
+
+    <% end %></div>
+</div>
 
 
 <script type="text/javascript">
