--- a/app/views/shared/_info.html.erb
+++ b/app/views/shared/_info.html.erb
@@ -1,5 +1,4 @@
-<h1>Info</h1>
-<table class="table">
+<table class="table table-info">
 <% unless user.first_name.blank? %>
     <tr><td>First name</td> <td><%= user.first_name %></td></tr>
 <% end %>
