--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -1,15 +1,19 @@
 <% provide(:title, "Profile") %>
-<div class="row">
+<div class="row main-header">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <h1><%= full_name current_user %></h1></div>
   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    <h1>Name: <%= full_name current_user %></h1>
-    <%= link_to 'Edit profile', edit_user_path(current_user) %>
-    <h2>Email: <%= @current_user.email %></h2>
+    <h2><%= @current_user.email %></h2>
+
     <%= image_tag current_user.avatar.url, class: 'img-responsive img-thumbnail' if current_user.avatar? %>
+    <br>
+    <%= link_to 'Edit profile', edit_user_path(current_user) %>
+
     <% if @current_user.friend_requests.any? %>
         <h1>Friend requests</h1>
         <%= render @current_user.friend_requests %>
     <% end %></div>
-  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+  <div class="col-xs-12 col-md-3">
     <%= render 'shared/info', user: current_user %>
   </div>
 </div>
@@ -20,7 +24,7 @@
 
       </div>
 <% end %>
-<div class="col-xs-12 col-sm-9 col-md-9 col-lg-9"><h1>The wall</h1>
+<div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
 
   <div id="wall"><%= render @feed %></div>
   <%= will_paginate @feed %>
