--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "#{@user.username}'s profile") %>
-<div class="row">
-  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"><h1><%= full_name @user %></h1>
-
+<div class="row main-header">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><h1><%= full_name @user %></h1></div>
+  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     <h2><%= @user.email %></h2>
     <%= image_tag @user.avatar.url, class: 'img-responsive img-thumbnail' if @user.avatar? %>
     <% if @current_user.is_friend?(@user) %>
@@ -27,7 +27,7 @@
             <% end %>
         <% end %>
     <% end %></div>
-  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+  <div class="col-xs-12 col-md-3">
     <%= render 'shared/info', user: @user %>
   </div>
 </div>
