--- a/app/views/searchs/home.html.erb
+++ b/app/views/searchs/home.html.erb
@@ -1,6 +1,8 @@
-<h1>Search</h1>
-<%= form_for :search, url: search_path do |f| %>
-    <%= f.label 'Enter email' %>
-    <%= f.email_field :email, class: 'form-control' %>
-    <%= f.submit 'Submit', class: 'btn btn-primary' %>
-<% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3"><h1>Search</h1>
+    <%= form_for :search, url: search_path do |f| %>
+        <%= f.label 'Enter email' %>
+        <%= f.email_field :email, class: 'form-control' %>
+        <%= f.submit 'Submit', class: 'btn btn-primary' %>
+    <% end %></div>
+</div>
