--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, 'Edit User' %>
-<h1>Edit user</h1>
+<div class="row"><div class="col-md-6 col-md-offset-3"><h1>Edit user</h1>
 <%= form_for(@user, html: { multipart: true }) do |f| %>
     <%= f.label 'Username' %>
     <%= f.text_field :username, class: 'form-control' %>
@@ -24,13 +24,8 @@
     <%= f.label 'Occupation' %>
     <%= f.text_field :occupation, class: 'form-control' %>
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
-<% end %>
+<% end %></div></div>
 
 <script type="text/javascript">
-    $('#user_avatar').bind('change', function () {
-        var size_in_megabytes = this.files[0].size / 1024 / 1024;
-        if (size_in_megabytes > 5) {
-            alert('Maximum file size is 5MB. Please choose a smaller file.');
-        }
-    });
+    $('#user_avatar').bind('change', check_size);
 </script>
