--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Register') %>
+<div class="row"><div class="col-md-6 col-md-offset-3"><h1>Register</h1>
 <%= form_for @user, html: {multipart: true} do |f| %>
     <%= f.label 'Username' %>
     <span id="hint"></span>
@@ -31,14 +32,11 @@
     <%= f.text_field :occupation, class: 'form-control' %>
     <br>
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
-<% end %>
+<% end %></div></div>
 
 
 <script type="text/javascript">
-    $('#user_avatar').bind('change', function () {
-        var size_in_megabytes = this.files[0].size / 1024 / 1024;
-        if (size_in_megabytes > 5) {
-            alert('Maximum file size is 5MB. Please choose a smaller file.');
-        }
-    });
+
+    $('#user_avatar').bind('change', check_size);
+
 </script>
