--- a/app/views/dialogs/new.html.erb
+++ b/app/views/dialogs/new.html.erb
@@ -1,11 +1,13 @@
 <% provide(:title, 'New Dialog') %>
-<h1>Create dialog</h1>
-<%= form_for :dialog, url: dialogs_path do |f| %>
-    <%= hidden_field_tag(:multi, true) %>
-    <span>Enter list of user's emails you want to chat with in the dialog you are going to create.</span>
-    <%= f.text_field :string, class: 'form-control' %>
-    <%= f.label 'Name' %>
-    <%= f.text_field :name, class: 'form-control' %>
-    <%= f.hidden_field(:creator_id, value: current_user.id) %>
-    <%= f.submit 'Submit', class: 'btn btn-primary' %>
-<% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3"><h1>Create dialog</h1>
+    <%= form_for :dialog, url: dialogs_path do |f| %>
+        <%= hidden_field_tag(:multi, true) %>
+        <span>Enter list of user's emails you want to chat with in the dialog you are going to create.</span>
+        <%= f.text_field :string, class: 'form-control' %>
+        <%= f.label 'Name' %>
+        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.hidden_field(:creator_id, value: current_user.id) %>
+        <%= f.submit 'Submit', class: 'btn btn-primary' %>
+    <% end %></div>
+</div>
