--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,17 @@
-<div class="container-fluid"><nav class="navbar navbar-default">
-  <ul class="nav navbar-nav">
-    <% if logged_in? %>
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'Profile', profile_path %></li>
-        <li><%= link_to 'Users', users_path %></li>
-        <li><%= link_to 'Dialogs', dialogs_user_path(@current_user) %></li>
-        <li><%= link_to 'Search', search_path %></li>
-        <li><%= link_to 'Log out', logout_path, method: :delete %></li>
-    <% else %>
-        <li><%= link_to 'Register', signup_path %></li>
-        <li><%= link_to 'Login', login_path %></li>
-    <% end %>
-  </ul>
-</nav></div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <% if logged_in? %>
+          <li><%= link_to 'Home', root_path %></li>
+          <li><%= link_to 'Profile', profile_path %></li>
+          <li><%= link_to 'Users', users_path %></li>
+          <li><%= link_to 'Dialogs', dialogs_user_path(@current_user) %></li>
+          <li><%= link_to 'Search', search_path %></li>
+          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+      <% else %>
+          <li><%= link_to 'Register', signup_path %></li>
+          <li><%= link_to 'Login', login_path %></li>
+      <% end %>
+    </ul>
+  </div>
+</nav>
