--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
       <p><%= post.content %></p>
       <%= image_tag post.image.url, class: 'img-responsive img-thumbnail post_image' if post.image? %>
       <% if post.from_id == @current_user.id || post.to_id == current_user.id %>
-          <%= link_to 'Delete', post_path(post, user: @current_user.id), method: :delete, class: 'btn btn-danger delete' %>
+          <%= link_to 'Delete', post_path(post, user: @current_user.id), method: :delete, class: 'btn btn-default delete' %>
           <% end %>
       <p>Likes: <%= post.likes.count %></p>
       <% if !post.liked?(current_user) %>
