Finished design by today and maybe finished it at all. It all depends on time I will have left after I will have done this fucking Physics.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,7 @@ $navbar-default-link-color: #fff;
 $navbar-default-link-hover-color: #4093d9;
 $link-color: $navbar-default-bg;
 $btn-primary-bg: $navbar-default-bg;
+$pagination-active-bg: $navbar-default-bg;
 @import "bootstrap";
 
 
@@ -77,4 +78,9 @@ tr > td {
 .pagination {
   margin-bottom: 0;
   margin-top: 5px;
+
+}
+
+.navbar {
+  border-radius: 0;
 }
