--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -19,7 +19,7 @@
 </div>
 <% if @current_user.friends.any? %>
     <div class="row">
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3"><h1>Friends</h1>
+      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 friends"><h1>Friends</h1>
         <%= render 'shared/friend_list' %>
 
       </div>
