--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+  <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 friends">
     <% if @user.friends.any? %>
         <h1>Friends</h1>
         <%= render 'shared/friend_list' %>
