--- a/app/views/dialogs/_dialog.html.erb
+++ b/app/views/dialogs/_dialog.html.erb
@@ -1,4 +1,4 @@
-<h1><%= dialog.name %></h1>
+<h1><%= dialog_name dialog %></h1>
 <% unless dialog.members.count < 3 %>
     <%= link_to 'Quit dialog', quit_dialog_path(user_id: current_user.id, dialog_id: dialog.id), method: :post %>
 <% end %>
