Did a lot of refactoring

--- a/app/views/dialogs/_dialog.html.erb
+++ b/app/views/dialogs/_dialog.html.erb
@@ -16,5 +16,5 @@
         $('#chat').append(formInput(data));
         $('#chat-scroll').scrollTop(document.getElementById('chat-scroll').scrollHeight);
     });
-    $('#message_content').keypress(check_key);
+    $('#message_content').keypress(check_dialog_enter);
 </script>
