--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,15 +52,6 @@
     PrivatePub.subscribe('/wall/<%= @user.id %>', function (data, channel) {
         $('#wall').prepend(form_input(data));
     });
-    var form_input;
 
-    form_input = function (data) {
-        var output;
-        return output = "<div class=\"post\"><p><strong>" + data.post.from + "</strong></p><p>" + data.post.content + "</p><img src=\"" + data.post.image + "\" class=\"img-responsive img-thumbnail post_image\" /><hr></div>";
-    };
-    $('#post_content').keypress(function (e) {
-        if (e.which === 13) {
-            return $('#new_post').submit();
-        }
-    });
+    $('#post_content').keypress(check_key);
 </script>
