--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,8 +39,7 @@
     <% else %>
         <h1>This user has no friends.</h1>
     <% end %></div>
-  <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9"><h1>The Wall</h1>
-    <h6>We don't need no education...</h6>
+  <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
 
     <div id="wall"><%= render @feed %></div>
     <%= will_paginate @feed %>
