--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -15,10 +15,5 @@
 
 
 <script type="text/javascript">
-    $('#post_image').bind('change', function () {
-        var size_in_megabytes = this.files[0].size / 1024 / 1024;
-        if (size_in_megabytes > 5) {
-            alert('Maximum file size is 5MB. Please choose a smaller file.');
-        }
-    });
+    $('#post_image').bind('change', check_size);
 </script>
